fix text overflow

--- a/ejet.css
+++ b/ejet.css
@@ -116,6 +116,7 @@ body {
   background-color: #bdc9d3;
   border-radius: 20%;
   user-select: none;
+  text-align: center;
 }
 
 .ejet-box-warm {
